--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "canvas-confetti": "^1.9.3",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
